# noiisseur

./: .gitignore  Cargo.toml  README.md  database.db  diesel.toml
app/: Cargo.toml
app/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
html/: success.html
migrations/2020-12-23-100639_create_tracks_table/: down.sql  up.sql
migrations/2021-03-27-075942_create_playlists_table/: down.sql  up.sql
migrations/2021-03-27-081904_create_playlist_offset_table/: down.sql  up.sql
migrations/2021-03-27-085701_create_tracks_table/: up.sql
noiisseur/database/: Cargo.toml
noiisseur/database/src/: lib.rs  models.rs  schema.rs
noiisseur/spotify/: Cargo.toml
noiisseur/spotify/src/: error.rs  lib.rs
scripts/: add_playlists.sh
