[package]
name = "noi"
version = "0.1.0"
authors = ["Senyo <simpsonsenyo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
dotenv = "0.15.0"
log = "0.4.11"
env_logger = "0.7.1"
oauth = { version = "0.4", package = "oauth1-request" }
reqwest = { version = "0.10.10", features = ["blocking", "json"] }

database = { path = "../noiisseur/database" }
spotify = { path = "../noiisseur/spotify" }