[package]
name = "spotify"
version = "0.1.0"
authors = ["Senyo <simpsonsenyo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
reqwest = { version = "0.10.10", features = ["blocking", "json"] }
webbrowser = "0.5.5"
base64 = "0.13.0"
serde_json = "1.0.60"
rust-ini = "0.16.0"
dirs = "3.0.1"