[package]
name = "spotify"
version = "0.1.0"
authors = ["Senyo <simpsonsenyo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
sha2 = "0.9.2"
hmac = "0.10.1"
csrf = "0.4.0"
ring = "0.16.19"
rocket = "0.4.6"
reqwest = { version = "0.10.10", features = ["blocking", "json"] }
webbrowser = "0.5.5"
base64 = "0.13.0"
serde_json = "1.0.60"
rust-ini = "0.16.0"
dirs = "3.0.1"
form_urlencoded = "1.0.0"